--- a/03.01-206-colors-starter/css/main.css
+++ b/03.01-206-colors-starter/css/main.css
@@ -79,6 +79,9 @@ footer {
     background-color: #e3e3e3;
   }
   
+  .col-3 {
+    width: 50%;
+  }
 }
 
 
@@ -102,6 +105,10 @@ footer {
 
   footer {
     background-color: #e3e3e3;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
    
 }
